fix(PoweredBy): use correct svgNote that this is a breaking change because they don't have `width: 70px` since that's way too smallAlso adds the svg for dark backgrounds with `.ais-PoweredBy--dark` (or should it be `--light`, slightly confused :p)

--- a/src/scss/site/base.scss
+++ b/src/scss/site/base.scss
@@ -328,3 +328,8 @@ body {
     border: 1px solid black;
   }
 }
+
+// dark background should be visible 
+.ais-PoweredBy--dark {
+  background: black;
+}
