--- a/src/scss/themes/reset.scss
+++ b/src/scss/themes/reset.scss
@@ -71,8 +71,8 @@
 
 .ais-PoweredBy-logo {
   display: block;
-  width: 70px;
-  height: auto;
+  height: 1em;
+  width: auto;
 }
 
 .ais-RatingMenu-starIcon {
